--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
-wrapper {
+.wrapper {
 	border-color: black solid;
 	border-radius: 5px;
+}
+
+.listado, .encabezado, .dato {
+	border: 2px groove gray;
+	border-collapse: collapse;
+	text-align: center;
 }
