--- a/templates/adminMenu.html
+++ b/templates/adminMenu.html
@@ -14,12 +14,12 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="./?class=UsuarioController&amp;action=index">Inicio<span class="sr-only">(current)</span></a></li>
+				<li class="active"><a href="./?class=AdministradorController&amp;action=index">Inicio<span class="sr-only">(current)</span></a></li>
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Incidentes<span class="caret"></span></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Usuarios<span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><a href="./?class=UsuarioController&amp;action=formIncidente">Nuevo Incidente</a></li>
-						<li><a href="./?class=UsuarioController&amp;action=incidentesList">Ver Incidentes</a></li>
+						<li><a href="./?class=AdministradorController&amp;action=formUsuario">Nuevo Usuarios</a></li>
+						<li><a href="./?class=AdministradorController&amp;action=usuariosList">Ver Usuarios</a></li>
 						<li><a href="#">Something else here</a></li>
 						<li role="separator" class="divider"></li>
 						<li><a href="#">Separated link</a></li>
