correccion login, save usuario

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,22 @@
 {% extends "layoutIndex.html" %}
 {% block content%}
 <div class="wrapper">
+	{% if message %}
+		<div class="text-center bg-warning">
+			<p> {{ message }} </p>
+		</div>
+	{% endif %}
 	<form class="form-horizontal" method="post" action="./?class=LoginController&amp;action=validar">
 		<div class="form-group">
 			<label for="username" class="col-md-4 control-label">Nombre de Usuario</label>
 			<div class="col-md-4">
-				<input id="username" type="text" name="username" class="form-control" placeholder="Nombre de Usuario">
+				<input id="username" type="text" name="username" class="form-control" required="" placeholder="Nombre de Usuario">
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="password" class="col-md-4 control-label">Contrase&ntilde;a</label>
 			<div class="col-md-4">
-				<input id="password" type="password" name="password" class="form-control" placeholder="Contrase&ntilde;a">
+				<input id="password" type="password" name="password" class="form-control" required="" placeholder="Contrase&ntilde;a">
 			</div>
 		</div>
 		<div class="form-group">
