--- a/templates/adminMenu.html
+++ b/templates/adminMenu.html
@@ -18,13 +18,8 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Usuarios<span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><a href="./?class=AdministradorController&amp;action=formUsuario">Nuevo Usuarios</a></li>
+						<li><a href="./?class=AdministradorController&amp;action=formUsuario">Nuevo Usuario</a></li>
 						<li><a href="./?class=AdministradorController&amp;action=usuariosList">Ver Usuarios</a></li>
-						<li><a href="#">Something else here</a></li>
-						<li role="separator" class="divider"></li>
-						<li><a href="#">Separated link</a></li>
-						<li role="separator" class="divider"></li>
-						<li><a href="#">One more separated link</a></li>
 					</ul>
 				</li>
 			</ul>
