--- a/templates/formIncidente.html
+++ b/templates/formIncidente.html
@@ -20,20 +20,25 @@
 			</div>
 
 			<div class="form-group">
-				<label for="activo" class="col-md-4 control-label">Tipo</label>
-				<div class="col-md-4">
-					<select id="activo" class="form-control" name="activo" required>
-						<option value="1">Activo</option>
-						<option value="0" selected>Inactivo</option>
-					</select>
-				</div>
-			</div>
-
-			<div class="form-group">
 				<label for="descripcion" class="col-md-4 control-label">Descripcion</label>
 				<div class="col-md-4">
 					<textarea id="descripcion" class="form-control" name="descripcion" required>
 					</textarea>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<label for="descripcion" class="col-md-4 control-label">Lista Objetos</label>
+				<div class="col-md-4">
+					<input class="form-control" type="text" name="objeto[]" value="Ingrese Objeto" />
+				</div>
+				<div class="col-md-4">
+					<!-- input class="btn btn-default" type="button" id="btn_eliminar" value="-" -->
+					<input class="btn btn-primary" type="button" id="btn_agregar" value="Agregar" />
+				</div>
+			</div>
+			<div class="form-group">
+				<div id="lista" class="col-lg-offset-4 col-md-4">
 				</div>
 			</div>
 
@@ -45,4 +50,14 @@
 			</div>
 		</form>
 	</div>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$("#txt_contenido_li").focus();
+			$("#btn_agregar").click(function() {
+				var objectInput = "<input class=\"form-control\" type=\"text\" name=\"objeto[]\" value=\"Ingrese Objeto\">";
+				$("#lista").append(objectInput);
+				$("#txt_contenido_li").val("").focus();
+			});
+		});
+	</script>
 {% endblock %}
