--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,16 @@
 {% block content%}
 	<div class="container">
 		<div class="row">
+			{% if message %}
+			<div class="text-center bg-info">
+				<p> {{ message }} </p>
+			</div>
+			{% endif %}
+			{% if error %}
+			<div class="text-center bg-danger">
+				<p> {{ error }} </p>
+			</div>
+			{% endif %}
 			<div class="col-sm-4">
 				<h3>Column 1</h3>
 				<p>Lorem ipsum dolor..</p><p>Ut enim ad..</p>
