--- a/templates/layoutBackend.html
+++ b/templates/layoutBackend.html
@@ -14,6 +14,9 @@
 
 	<!-- BOOTSTRAP JS-->
 	<script src="js/bootstrap.min.js" type="text/javascript"></script>
+
+	<!-- Funciones JS-->
+	<script src="js/scripts.js" type="text/javascript"></script>
 </head>
 <body>
 	<div class="jumbotron text-center">
