--- a/templates/userMenu.html
+++ b/templates/userMenu.html
@@ -20,11 +20,8 @@
 					<ul class="dropdown-menu">
 						<li><a href="./?class=UsuarioController&amp;action=formIncidente">Nuevo Incidente</a></li>
 						<li><a href="./?class=UsuarioController&amp;action=incidentesList">Ver Incidentes</a></li>
-						<li><a href="#">Something else here</a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="#">Separated link</a></li>
-						<li role="separator" class="divider"></li>
-						<li><a href="#">One more separated link</a></li>
+						<li><a href="#">Ver Estados</a></li>
 					</ul>
 				</li>
 			</ul>
